@@ -19,7 +19,7 @@ namespace AjModel.WebMvc
             routes.MapRoute(
                 "Default", // Route name
                 "{controller}/{action}/{id}", // URL with parameters
-                new { controller = "Home", action = "Index", id = UrlParameter.Optional } // Parameter defaults
+                new { controller = "Entity", action = "Index", id = UrlParameter.Optional } // Parameter defaults
             );
 
         }
